--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,11 +1,364 @@
-.test1 {
-    color: red;
-    background-color: aquamarine;
+$main-color: #FF7766;
+$custom-color: #EEE;
+
+@font-face {
+    font-family: "cairoFont";
+    src: url(../fonts/Cairo-Regular.ttf);
 }
-.test3 {
-    color: blue;
+
+body {
+    font-family: "cairoFont", 'Cambria, Cochin, Georgia, Times, Times New Roman, Serif' !important;
+}
+
+.container-fluid {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    overflow: hidden;
+}
+
+button.carousel-control-prev,
+button.carousel-control-next {
+    border: none !important;
+    background: none !important;
+}
+
+.custom-btn {
+    color: $main-color !important;
+    border: 1px solid $main-color !important;
     font-weight: bold;
-    font-style: italic;
-    background-color: #ddd;
-    text-align: center;
+    padding: 10px 20px;
+    &:hover,
+    &:focus {
+        background-color: $main-color;
+        border-color: $custom-color !important;
+        color: $custom-color !important;
+    }
+}
+
+.custom-btn-main {
+    padding: 20px;
+    background-color: $main-color !important;
+    color: #FFF;
+    font-weight: bold;
+    width: 250px;
+    &:hover {
+        color: #000;
+    }
+}
+
+.top-menu {
+    .navbar {
+        font-weight: bold;
+        padding: 0px 100px !important;
+        background-color: #FFF !important;
+        .navbar-nav {
+            li > a {
+                &:hover {
+                    color: $main-color !important;
+                    border-bottom: 1px solid $main-color;
+                    background-color: $custom-color;
+                }
+                transition: background-color 0.5s;
+                -webkit-transition: background-color 0.5s;
+                -moz-transition: background-color 0.5s;
+                -ms-transition: background-color 0.5s;
+                -o-transition: background-color 0.5s;
+            }
+            li.active > a{
+                color: $main-color !important;
+                border-bottom: 1px solid $main-color;
+            }
+        }
+    }
+}
+
+.carousel-top {
+    .row {
+        display: block !important;
+    }
+    .carousel {
+        .carousel-item {
+            height: 450px;
+            position: relative;
+            img {
+                height: 100%;
+            }
+            .carousel-caption {
+                display: flex !important;
+                flex-flow: column;
+                align-items: center;
+                justify-content: center;
+                margin-bottom: 50px;
+                h1 {
+                    font-weight: bold;
+                    color: white;
+                    margin-bottom: 50px;
+                }
+                h4 {
+                    color: $custom-color;
+                    width: 90%;
+                }
+            }
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(65, 155, 155, 0.5);
+            }
+        }
+        .carousel-indicators {
+            li {
+                width: 15px;
+                height: 15px;
+                border-radius: 50%;
+                margin: 20px 5px 0px 0px;
+                &.active {
+                    background-color: $main-color;
+                }
+            }
+        }
+    }
+}
+
+.about {
+    p {
+        line-height: 2em;
+        .company-name {
+            color: $main-color;
+        }
+    }
+}
+
+.latest-projects {
+    background-color: #ffffcc;
+    #latest-company-projects {
+        width: 80%;
+        .thumbnail2 {
+            position: relative;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            height: 160px;
+            .caption2{
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-color: rgba(65, 155, 155, 0.5);
+                max-width: 100%;
+                height: 100%;
+                padding: 2%;
+                text-align: center;
+                color: #fff !important;
+                display: none;
+                .project-details {
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+            }
+            .project-category {
+                position: absolute;
+                right: 0;
+                top: 5%;
+                background-color: rgba(240, 240, 240, 0.75);
+                padding: 10px;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
+                box-shadow: 0px 5px 20px 0px #202020;
+            }
+        }
+        .carousel-control-next {
+            position: absolute;
+            left: -5%;
+            color: #252222;
+            width: 0 !important;
+        }
+        .carousel-control-prev {
+            position: absolute;
+            right: -5%;
+            color: #252222;
+            width: 0 !important;
+        }
+    }
+    
+}
+
+.said-about-company {
+    #said-about-company-carousel {
+        width: 80% !important;
+        margin: auto;
+        .carousel-item {
+            text-align: center;
+            img {
+                border-radius: 8px;
+                margin-bottom: 15px;
+            }
+        }
+        .carousel-control-next {
+            position: absolute;
+            left: -5%;
+            color: #252222;
+            width: 0 !important;
+        }
+        .carousel-control-prev {
+            position: absolute;
+            right: -5%;
+            color: #252222;
+            width: 0 !important;
+        }
+    }
+}
+
+.clients {
+    background-color: #419B9B;
+}
+
+.latest-posts {
+    .card {
+        position: relative;
+        border: 1px solid #CCC;
+        border-radius: 5px;
+        overflow: hidden;
+        img {
+            width: 100%;
+            max-height: 60%;
+        }
+        .info {
+            position: relative;
+            top: -17px;
+            left: -5%;
+            width: 90%;
+            background-color: #FFF;
+            border: 1px solid #CCC;
+            border-radius: 5px;
+            padding: 1.25rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            h4 {
+                font-weight: bold;
+                font-size: 18px;
+                text-align: center;
+            }
+            .project-details {
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                width: 90%;
+                font-size: 14px;
+                text-align: center;
+            }
+        }
+    }
+}
+
+footer {
+    background-color: #393939;
+    color: #FFF;
+    .line1 {
+        background-color: #FFF;
+        height: 2px;
+        width: 60px;
+    }
+    .footer-nav-link a {
+        color: #BBBBBB;
+        margin-right: 20px;
+        font-size: 90%;
+        &:hover {
+            color: #FFF;
+            text-decoration: none;
+        }
+    }
+    .line2 {
+        background-color: #FFF;
+        height: 2px;
+        width: 75%;
+    }
+    .input-groub {
+        display: flex;
+        margin-bottom: 20px;
+        input[type="email"] {
+            background-color: #202020;
+            color: #495057;
+            outline: none;
+            border: none;
+            text-align: right;
+            padding: 10px 10px 10px 35px;
+            border-radius: 5px;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            font-size: 20px;
+        }
+        button {
+            border-radius: 0;
+            font-size: 20px;
+        }
+    }
+    .copy-right-link,
+    .copy-right {
+        color: #BBBBBB;
+        font-weight: bold;
+    }
+    .copy-right-link {
+        &:hover {
+            text-decoration: none;
+            color: #FFF;
+        }
+    }
+
+}
+
+@media (max-width: 991px) {
+    .top-menu {
+        .navbar {
+            padding: 0px 20px !important;
+
+            .navbar-nav {
+                a {
+                    border-bottom: none !important;
+                    padding-right: 5px;
+                }
+            }
+        }
+    }
+
+    .carousel {
+        .carousel-item {
+            .carousel-caption {
+                h1 {
+                    font-size: 30px;
+                }
+                h4 {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+
+}
+@media (max-width: 767px) {
+    .carousel {
+        .carousel-item {
+            .carousel-caption {
+                h1 {
+                    font-size: 25px;
+                }
+            }
+        }
+    }
+    .carousel-control-next {
+        display: none;
+    }
+    .carousel-control-prev {
+        display: none;
+    }
+    
+}
+@media (max-width: 576px){
+
 }
